<resources>
    <string name="app_name">Drive Facile</string>
    <string name="title">Drive Facile</string>
    <string name="introduction">Scegli uno o più file dal telefono o tablet, poi inviali a Google Drive.</string>
    <string name="introduction_v02">Autorizza una cartella una sola volta. Drive Facile conserverà il permesso per poterla usare nelle automazioni successive.</string>
    <string name="authorize_folder">1. Autorizza una cartella del tablet</string>
    <string name="no_folder_authorized">Nessuna cartella autorizzata.</string>
    <string name="authorized_folder_prefix">Cartella autorizzata: %1$s</string>
    <string name="folder_saved">Cartella autorizzata e memorizzata.</string>
    <string name="folder_permission_error">Android non ha concesso il permesso persistente per questa cartella.</string>
    <string name="legacy_section">Funzione precedente di prova</string>
    <string name="choose_files">Scegli i file</string>
    <string name="no_files_selected">Nessun file selezionato.</string>
    <string name="upload_to_drive">Carica su Drive</string>
    <string name="privacy_note">L\'app accede soltanto ai file che scegli. Non richiede il permesso di leggere tutto il dispositivo.</string>
    <string name="privacy_note_v02">Drive Facile accede solo alle cartelle che autorizzi esplicitamente tramite Android. Il permesso può essere revocato dalle impostazioni del dispositivo.</string>
    <string name="unknown_file">File senza nome</string>
    <string name="choose_at_least_one">Scegli almeno un file.</string>
    <string name="choose_drive">Scegli Google Drive</string>
</resources>
